# CosmosX

./: .env.testnet.example  .gitignore  ADMIN_GUIDE.md  CONTRACTS.md  CosmosX_Stellar_Guide_Part1_DevEnvironment.md  CosmosX_Stellar_Guide_Part2_Wallet.md  CosmosX_Stellar_Guide_Part3_Testnet.md  CosmosX_Stellar_Guide_Part4_SorobanContract.md  CosmosX_Stellar_Guide_Part5_FrontendIntegration.md  CosmosX_Stellar_Guide_Part6_CosmosXIntegration.md  CosmosX_Stellar_Guide_Part7_DemoPreparation.md  CosmosX_Stellar_Roadmap.md  CosmosX_Stellar_Testnet_Implementation_Plan.md  CosmosX_Technical_Architecture.md  DEPLOYMENT.md  README.md  ROADMAP.md  USER_GUIDE.md  mercury (2).md  mercury.md  package-lock.json  package.json  task.md  walkthrough.md
contracts/achievement/: Cargo.toml  DEPLOYMENT.md  README.md
contracts/achievement/scripts/: deploy-testnet.sh
contracts/achievement/src/: lib.rs  test.rs
contracts/achievement/test_snapshots/test/: test_double_mint_panics.1.json  test_mint_and_check.1.json  test_mint_requires_recipient_auth.1.json
contracts/marketplace/: Cargo.toml  DEPLOYMENT.md
contracts/marketplace/scripts/: deploy-testnet.sh
contracts/marketplace/src/: errors.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/marketplace/test_snapshots/test/: test_buy_own_listing_panics.1.json  test_buy_transfers_ownership_and_payment.1.json  test_double_mint_panics.1.json  test_get_metadata_unregistered_returns_none.1.json  test_list_creates_listing_and_delist_removes_it.1.json  test_list_unminted_returns_error.1.json  test_make_and_accept_offer.1.json  test_mint_sets_owner_and_supply.1.json  test_mint_unregistered_returns_error.1.json  test_multiple_offers_have_unique_ids.1.json  test_owner_of_unminted_returns_none.1.json  test_reject_nonexistent_offer_panics.1.json  test_reject_offer_removes_it.1.json  test_transfer_changes_owner.1.json  test_transfer_records_owner_as_authorizing_address.1.json  test_transfer_while_listed_panics.1.json
scripts/: test-register-auth.mjs  test-register-encoding.mjs
src/: routeTree.gen.ts  styles.css
src/components/: FreighterSimulator.tsx  HeroContent.tsx  NFTCard.tsx  Nav.tsx  Planet3DViewer.tsx  PlanetAcademy.tsx  PlanetTooltip.tsx  SolarSystem.tsx
src/components/module/: AlienTransmissionSimulation.tsx  AppendOnlyLedgerSimulation.tsx  ArchitectureDecision.tsx  AvalancheEffectSimulation.tsx  BlockDominoMonitor.tsx  BlockHeaderSealingEngine.tsx  BlockchainNodeOperations.tsx  BlockchainTradeoffsCalculator.tsx  ByzantineConsensusWarRoom.tsx  ChainIntegritySimulation.tsx  ChapterChallengeSimulation.tsx  CryptographicHashSimulation.tsx  DatabaseVsBlockchainMatrix.tsx  DecentralizedConsensusCommand.tsx  DoubleSpendAuditor.tsx  FaultToleranceCommand.tsx  (+33 more)
src/lib/: exoplanets-data.ts  marketplace-store.ts  mercury-curriculum.ts  module1-store.ts
src/routes/: __root.tsx  dashboard.tsx  index.tsx  marketplace.tsx
(+17 files in other folders)
